@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-05T00:29:18Z",
-  "count_outdated" : 228,
-  "uniques_outdated" : 163,
+  "timestamp" : "2024-02-07T00:26:48Z",
+  "count_outdated" : 229,
+  "uniques_outdated" : 164,
   "count" : 230,
   "uniques" : 165,
   "clones" : [
-    {
-      "timestamp": "2024-01-23T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-02-04T00:00:00Z",
       "count": 1,
